[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/shooter1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/enemy_kill.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/enemy_shoot_1.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sfx/combo_1.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/sprites/shooter2.png" type="Texture" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 1.78637, 0.0, 0, 0 ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483649
script = ExtResource( 2 )
movement_curve = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="CooldownTimer" type="Timer" parent="."]
autostart = true

[node name="Tween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="ExitTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="EnterTween" type="Tween" parent="."]
playback_process_mode = 0

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="KillAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
